kubernetes/application/hug/hug-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hug-deployment
  name: hug-deployment
  namespace: hug
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hug-pod
  template:
    metadata:
      labels:
        app: hug-pod
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: hug
        image: kustomize-container-image-registry/hug:latest
        ports:
          - containerPort: 8000
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        resources: 
          requests:
            cpu: "0.5"
            memory: 64Mi
          limits:
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8000
