kubernetes/application/hug/hug-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hug-service
  name: hug-service
  namespace: hug
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: hug-pod
  type: LoadBalancer
