kubernetes/application/hug/hug-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hug-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
  namespace: hug
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: hug-service
                port:
                  number: 8000
